# camlimages

./: .hgignore  .hgtags  Changes.txt  OMakefile  OMyMakeroot  README.md  camlimages.opam  dune-project
config/: .ocamlspot  ciconfig.ml  configlib.install  dune  jbuild  xConfigurator.ml  xConfigurator.mli
core/: camlimages.cppo.ml  color.ml  color.mli  images.ml  jbuild  ps.ml
examples/tiffps/: tiffps.ml
exif/: dune  exif.ml  exif_c.c  jbuild
freetype/: dune  ftintf.c
gif/: dune  gifread.c  gifwrite.c
graphics/: dune
include/: compat.h  oversized.h
jpeg/: dune  jpeg.ml  jpeg.mli  jpegread.c  jpegwrite.c
opam/: opam
opam/template/: opam
png/: dune  jbuild  pngread.c  pngwrite.c
src/: OMakefile  bmp.ml  cmyk32.ml  gif.ml  imagegdk.ml  index16.ml  index8.ml  jpeg.ml  png.ml  ps.ml  rgb24.ml  rgba32.ml  tiff.ml
test/: OMakefile  dune  jbuild  jpgexif.ml  loadimages.ml  test.ml
tiff/: dune  tiffread.c  tiffwrite.c
xpm/: dune  xpmread.c
