(library
 (name camlimages_exif)
 (public_name camlimages.exif)
 (wrapped false)
 (libraries camlimages.core unix)
 (library_flags -linkall)

 (foreign_stubs
   (language c)
   (names exif_c)
   (flags
     (:include ../config/exif_c_flags.sexp)))
 (c_library_flags
   (:include ../config/exif_c_library_flags.sexp)))

(copy_files ../include/compat.h)
