(library
 (name camlimages_freetype)
 (public_name camlimages.freetype)
 (wrapped false)
 (libraries camlimages.core)
 (foreign_stubs
   (language c)
   (names ftintf)
   (flags
     (:include ../config/freetype_c_flags.sexp)))
 (c_library_flags
  (:include ../config/freetype_c_library_flags.sexp)))

(copy_files ../include/compat.h)
