(library
 (name camlimages_gif)
 (public_name camlimages.gif)
 (wrapped false)
 (libraries camlimages.core)
 (library_flags -linkall)
 (foreign_stubs
   (language c)
   (names gifread gifwrite)
   (flags
     (:include ../config/gif_c_flags.sexp)))
 (c_library_flags
  (:include ../config/gif_c_library_flags.sexp)))

(copy_files ../include/oversized.h)
(copy_files ../include/compat.h)

