(library
 (name camlimages_jpeg)
 (public_name camlimages.jpeg)
 (wrapped false)
 (libraries camlimages.core)
 (library_flags -linkall)
 (foreign_stubs
   (language c)
   (names jpegread jpegwrite)
   (flags
     :standard
     (:include ../config/jpeg_c_flags.sexp)))
 (c_library_flags
  (:include ../config/jpeg_c_library_flags.sexp)))

(copy_files ../include/oversized.h)
(copy_files ../include/compat.h)

