(library
 (name camlimages_png)
 (public_name camlimages.png)
 (wrapped false)
 (flags -w -37)
 (libraries camlimages.core)
 (library_flags -linkall)
 (foreign_stubs
   (language c)
   (names pngread pngwrite)
   (flags
     (:include ../config/png_c_flags.sexp)))
 (c_library_flags
  (:include ../config/png_c_library_flags.sexp)))

(copy_files ../include/oversized.h)
(copy_files ../include/compat.h)
