(executable
 (name test)
 (modules test)
 (libraries camlimages.core camlimages.gif camlimages.jpeg camlimages.png
   camlimages.tiff camlimages.xpm camlimages.graphics camlimages.freetype))

; (test
;  (name test2)
;  (modules test2)
;  (libraries camlimages.core camlimages.gif camlimages.jpeg camlimages.png
;    camlimages.tiff camlimages.xpm camlimages.graphics camlimages.freetype))

(test
 (name loadimages)
 (modules loadimages)
 (libraries camlimages.core camlimages.gif camlimages.jpeg camlimages.png
  camlimages.tiff camlimages.xpm camlimages.freetype))

(test
 (name jpgmark)
 (modules jpgmark)
 (libraries camlimages.core camlimages.jpeg))

(test
 (name jpgexif)
 (modules jpgexif)
 (libraries camlimages.core camlimages.jpeg camlimages.exif))

(test
 (name dyn)
 (modules dyn)
 (libraries camlimages.core dynlink))
