(library
 (name camlimages_tiff)
 (public_name camlimages.tiff)
 (wrapped false)
 (libraries camlimages.core)
 (library_flags -linkall)
 (foreign_stubs
   (language c)
   (names tiffwrite tiffread)
   (flags
     :standard
     (:include ../config/tiff_c_flags.sexp)))
 (c_library_flags
  (:include ../config/tiff_c_library_flags.sexp)))

(copy_files ../include/oversized.h)
(copy_files ../include/compat.h)

