(library
 (name camlimages_xpm)
 (public_name camlimages.xpm)
 (wrapped false)
 (libraries camlimages.core)
 (library_flags -linkall)

 (foreign_stubs
   (language c)
   (names xpmread xpmwrite)
   (flags
     (:include ../config/xpm_c_flags.sexp)))
 (c_library_flags     
  (:include ../config/xpm_c_library_flags.sexp)))

(copy_files ../include/oversized.h)
(copy_files ../include/compat.h)
